vpc.tf
# 1. VPC

resource "aws_vpc" "terraform_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "vpc1-tag"
  }
}
